Improve formatting of crafting icons tooltips in material pages
Doing the "white title" - "grey description" format overall